--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,18 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+    <build>
+        <plugins>
+        <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                  <includes>
+                    <include>src/main/resources</include>
+                  </includes>
+                </configuration>
+              </plugin>
+        </plugins>
+    </build>
 	
 </project>
